# bpf_lifter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
cli/: main.cpp
include/: Decompiler.h  Lifter.h  ProgLifter.h  bpf_extern.h  bpf_instr.h  bpf_utils.h  elf_utils.h  instr_utils.h
scripts/: bpf_function_data.csv  helperFuncMap.py
src/: Decompiler.cpp  Lifter.cpp  ProgLifter.cpp  bpf_utils.cpp  elf_utils.cpp  instr_utils.cpp
